--- a/src/app/features/components/dashboard/app-overview/app-overview.component.html
+++ b/src/app/features/components/dashboard/app-overview/app-overview.component.html
@@ -28,19 +28,8 @@
         [activeIcon]="activeIcon"
         (remoteSelected)="selectRemote($event)"
         (openInFiles)="triggerOpenInFiles($event)"
-        (primaryAction)="triggerPrimaryAction($event)"
-        (secondaryAction)="triggerSecondaryAction($event)"
-        (mountAction)="onMountAction($event)"
-        (unmountAction)="onUnmountAction($event)"
-        (syncAction)="onSyncAction($event)"
-        (copyAction)="onCopyAction($event)"
-        (moveAction)="onMoveAction($event)"
-        (bisyncAction)="onBisyncAction($event)"
-        (stopSyncAction)="onStopSyncAction($event)"
-        (stopCopyAction)="onStopCopyAction($event)"
-        (stopMoveAction)="onStopMoveAction($event)"
-        (stopBisyncAction)="onStopBisyncAction($event)"
-        (configurePrimaryActions)="onConfigurePrimaryActions($event)"
+        (startJob)="startJob.emit({ type: $event.type, remoteName: $event.remoteName })"
+        (stopJob)="stopJob.emit({ type: $event.type, remoteName: $event.remoteName })"
       >
       </app-remotes-panel>
     }
@@ -59,19 +48,8 @@
         [activeIcon]="activeIcon"
         (remoteSelected)="selectRemote($event)"
         (openInFiles)="triggerOpenInFiles($event)"
-        (primaryAction)="triggerPrimaryAction($event)"
-        (secondaryAction)="triggerSecondaryAction($event)"
-        (mountAction)="onMountAction($event)"
-        (unmountAction)="onUnmountAction($event)"
-        (syncAction)="onSyncAction($event)"
-        (copyAction)="onCopyAction($event)"
-        (moveAction)="onMoveAction($event)"
-        (bisyncAction)="onBisyncAction($event)"
-        (stopSyncAction)="onStopSyncAction($event)"
-        (stopCopyAction)="onStopCopyAction($event)"
-        (stopMoveAction)="onStopMoveAction($event)"
-        (stopBisyncAction)="onStopBisyncAction($event)"
-        (configurePrimaryActions)="onConfigurePrimaryActions($event)"
+        (startJob)="startJob.emit({ type: $event.type, remoteName: $event.remoteName })"
+        (stopJob)="stopJob.emit({ type: $event.type, remoteName: $event.remoteName })"
       >
       </app-remotes-panel>
     }
@@ -90,19 +68,8 @@
         [activeIcon]="activeIcon"
         (remoteSelected)="selectRemote($event)"
         (openInFiles)="triggerOpenInFiles($event)"
-        (primaryAction)="triggerPrimaryAction($event)"
-        (secondaryAction)="triggerSecondaryAction($event)"
-        (mountAction)="onMountAction($event)"
-        (unmountAction)="onUnmountAction($event)"
-        (syncAction)="onSyncAction($event)"
-        (copyAction)="onCopyAction($event)"
-        (moveAction)="onMoveAction($event)"
-        (bisyncAction)="onBisyncAction($event)"
-        (stopSyncAction)="onStopSyncAction($event)"
-        (stopCopyAction)="onStopCopyAction($event)"
-        (stopMoveAction)="onStopMoveAction($event)"
-        (stopBisyncAction)="onStopBisyncAction($event)"
-        (configurePrimaryActions)="onConfigurePrimaryActions($event)"
+        (startJob)="startJob.emit({ type: $event.type, remoteName: $event.remoteName })"
+        (stopJob)="stopJob.emit({ type: $event.type, remoteName: $event.remoteName })"
       >
       </app-remotes-panel>
     }
