--- a/src/app/features/components/dashboard/general-overview/general-overview.component.html
+++ b/src/app/features/components/dashboard/general-overview/general-overview.component.html
@@ -24,14 +24,8 @@
         [activeIcon]="'mount'"
         (remoteSelected)="onRemoteSelectedFromPanel($event)"
         (openInFiles)="onOpenInFilesFromPanel($event)"
-        (primaryAction)="onPrimaryActionFromPanel($event)"
-        (secondaryAction)="onSecondaryActionFromPanel($event)"
-        (mountAction)="mountRemote.emit($event)"
-        (unmountAction)="unmountRemote.emit($event)"
-        (syncAction)="startOperation.emit({ type: 'sync', remoteName: $event })"
-        (copyAction)="startOperation.emit({ type: 'copy', remoteName: $event })"
-        (stopSyncAction)="stopJob.emit({ type: 'sync', remoteName: $event })"
-        (stopCopyAction)="stopJob.emit({ type: 'copy', remoteName: $event })"
+        (startJob)="startJob.emit({ type: $event.type, remoteName: $event.remoteName })"
+        (stopJob)="stopJob.emit({ type: $event.type, remoteName: $event.remoteName })"
         role="region"
         aria-labelledby="remotes-panel-title"
       >
