--- a/src/app/features/modals/password-manager-modal/password-manager-modal.component.html
+++ b/src/app/features/modals/password-manager-modal/password-manager-modal.component.html
@@ -195,32 +195,38 @@
 
               <div class="card-content">
                 <div class="password-actions-grid">
-                  <mat-form-field appearance="outline" class="full-width">
-                    <mat-label>Configuration Password</mat-label>
-                    <input
-                      matInput
-                      type="password"
-                      [(ngModel)]="passwordState.password"
-                      (ngModelChange)="onPasswordChange()"
-                      placeholder="Enter your rclone config password"
-                      [disabled]="!!lockoutStatus?.is_locked"
-                      autocomplete="current-password"
-                      [class.mat-form-field-invalid]="!!errors.password"
-                    />
-                    <mat-icon matSuffix svgIcon="key"></mat-icon>
-                    @if (errors.password) {
-                      <mat-error>{{ errors.password }}</mat-error>
-                    }
-                  </mat-form-field>
+                  <form [formGroup]="overviewForm">
+                    <mat-form-field appearance="outline" class="full-width">
+                      <mat-label>Configuration Password</mat-label>
+                      <input
+                        matInput
+                        type="password"
+                        formControlName="password"
+                        placeholder="Enter your rclone config password"
+                        autocomplete="current-password"
+                      />
+                      <mat-icon matSuffix svgIcon="key"></mat-icon>
+                      <mat-error *ngIf="overviewForm.get('password')?.hasError('required')">
+                        Password is required
+                      </mat-error>
+                      <mat-error *ngIf="overviewForm.get('password')?.hasError('minLength')">
+                        {{ overviewForm.get('password')?.errors?.['minLength']?.message }}
+                      </mat-error>
+                      <mat-error *ngIf="overviewForm.get('password')?.hasError('invalidChars')">
+                        {{ overviewForm.get('password')?.errors?.['invalidChars']?.message }}
+                      </mat-error>
+                      <mat-error *ngIf="overviewForm.get('password')?.hasError('apiError')">
+                        {{ overviewForm.get('password')?.errors?.['apiError']?.message }}
+                      </mat-error>
+                    </mat-form-field>
+                  </form>
                 </div>
               </div>
               <div class="card-actions">
                 <button
                   mat-raised-button
                   color="primary"
-                  [disabled]="
-                    !canStorePassword || loading.isValidating || !!lockoutStatus?.is_locked
-                  "
+                  [disabled]="!canValidatePassword || loading.isValidating"
                   (click)="validatePassword2()"
                 >
                   <mat-icon svgIcon="circle-check"></mat-icon>
@@ -234,9 +240,7 @@
                 @if (!hasStoredPassword) {
                   <button
                     mat-stroked-button
-                    [disabled]="
-                      !canStorePassword || loading.isStoringPassword || !!lockoutStatus?.is_locked
-                    "
+                    [disabled]="!canStorePassword || loading.isStoringPassword"
                     (click)="storePassword()"
                   >
                     <mat-icon svgIcon="save"></mat-icon>
@@ -321,47 +325,57 @@
 
             <!-- Encrypt/Decrypt Form -->
             <div class="encryption-form">
-              <mat-form-field appearance="outline" class="full-width">
-                <mat-label>{{
-                  isConfigEncrypted ? 'Password for Decryption' : 'Password for Encryption'
-                }}</mat-label>
-                <input
-                  matInput
-                  type="password"
-                  [(ngModel)]="passwordState.password"
-                  (ngModelChange)="onPasswordChange()"
-                  [placeholder]="
-                    isConfigEncrypted
-                      ? 'Enter password to decrypt configuration'
-                      : 'Enter password to encrypt configuration'
-                  "
-                  autocomplete="current-password"
-                  [class.mat-form-field-invalid]="!!errors.password"
-                />
-                <mat-icon matSuffix [svgIcon]="isConfigEncrypted ? 'lock-open' : 'lock'"></mat-icon>
-                @if (errors.password) {
-                  <mat-error>{{ errors.password }}</mat-error>
-                }
-              </mat-form-field>
-
-              @if (!isConfigEncrypted) {
+              <form [formGroup]="encryptionForm">
                 <mat-form-field appearance="outline" class="full-width">
-                  <mat-label>Confirm Password</mat-label>
+                  <mat-label>{{
+                    isConfigEncrypted ? 'Password for Decryption' : 'Password for Encryption'
+                  }}</mat-label>
                   <input
                     matInput
                     type="password"
-                    [(ngModel)]="passwordState.confirmPassword"
-                    (ngModelChange)="onConfirmPasswordChange()"
-                    placeholder="Confirm your password"
-                    autocomplete="new-password"
-                    [class.mat-form-field-invalid]="!!errors.confirmPassword"
+                    formControlName="password"
+                    [placeholder]="
+                      isConfigEncrypted
+                        ? 'Enter password to decrypt configuration'
+                        : 'Enter password to encrypt configuration'
+                    "
+                    autocomplete="current-password"
                   />
-                  <mat-icon matSuffix svgIcon="lock"></mat-icon>
-                  @if (errors.confirmPassword) {
-                    <mat-error>{{ errors.confirmPassword }}</mat-error>
-                  }
+                  <mat-icon
+                    matSuffix
+                    [svgIcon]="isConfigEncrypted ? 'lock-open' : 'lock'"
+                  ></mat-icon>
+                  <mat-error *ngIf="encryptionForm.get('password')?.hasError('required')">
+                    Password is required
+                  </mat-error>
+                  <mat-error *ngIf="encryptionForm.get('password')?.hasError('minLength')">
+                    {{ encryptionForm.get('password')?.errors?.['minLength']?.message }}
+                  </mat-error>
+                  <mat-error *ngIf="encryptionForm.get('password')?.hasError('invalidChars')">
+                    {{ encryptionForm.get('password')?.errors?.['invalidChars']?.message }}
+                  </mat-error>
                 </mat-form-field>
-              }
+
+                @if (!isConfigEncrypted) {
+                  <mat-form-field appearance="outline" class="full-width">
+                    <mat-label>Confirm Password</mat-label>
+                    <input
+                      matInput
+                      type="password"
+                      formControlName="confirmPassword"
+                      placeholder="Confirm your password"
+                      autocomplete="new-password"
+                    />
+                    <mat-icon matSuffix svgIcon="lock"></mat-icon>
+                    <mat-error *ngIf="encryptionForm.get('confirmPassword')?.hasError('required')">
+                      Please confirm your password
+                    </mat-error>
+                    <mat-error *ngIf="encryptionForm.hasError('passwordMismatch')">
+                      {{ encryptionForm.errors?.['passwordMismatch']?.message }}
+                    </mat-error>
+                  </mat-form-field>
+                }
+              </form>
             </div>
           </div>
 
@@ -415,22 +429,34 @@
             </div>
 
             <div class="card-content">
-              <div class="password-change-form">
+              <form [formGroup]="changePasswordForm" class="password-change-form">
                 <mat-form-field appearance="outline" class="full-width">
                   <mat-label>Current Password</mat-label>
                   <input
                     matInput
                     type="password"
-                    [(ngModel)]="passwordState.currentPassword"
-                    (ngModelChange)="onCurrentPasswordChange()"
+                    formControlName="currentPassword"
                     placeholder="Enter current password"
                     autocomplete="current-password"
-                    [class.mat-form-field-invalid]="!!errors.currentPassword"
                   />
                   <mat-icon matSuffix svgIcon="key"></mat-icon>
-                  @if (errors.currentPassword) {
-                    <mat-error>{{ errors.currentPassword }}</mat-error>
-                  }
+                  <mat-error
+                    *ngIf="changePasswordForm.get('currentPassword')?.hasError('required')"
+                  >
+                    Current password is required
+                  </mat-error>
+                  <mat-error
+                    *ngIf="changePasswordForm.get('currentPassword')?.hasError('minLength')"
+                  >
+                    {{ changePasswordForm.get('currentPassword')?.errors?.['minLength']?.message }}
+                  </mat-error>
+                  <mat-error
+                    *ngIf="changePasswordForm.get('currentPassword')?.hasError('invalidChars')"
+                  >
+                    {{
+                      changePasswordForm.get('currentPassword')?.errors?.['invalidChars']?.message
+                    }}
+                  </mat-error>
                 </mat-form-field>
 
                 <mat-form-field appearance="outline" class="full-width">
@@ -438,16 +464,22 @@
                   <input
                     matInput
                     type="password"
-                    [(ngModel)]="passwordState.newPassword"
-                    (ngModelChange)="onNewPasswordChange()"
+                    formControlName="newPassword"
                     placeholder="Enter new password"
                     autocomplete="new-password"
-                    [class.mat-form-field-invalid]="!!errors.newPassword"
                   />
                   <mat-icon matSuffix svgIcon="key"></mat-icon>
-                  @if (errors.newPassword) {
-                    <mat-error>{{ errors.newPassword }}</mat-error>
-                  }
+                  <mat-error *ngIf="changePasswordForm.get('newPassword')?.hasError('required')">
+                    New password is required
+                  </mat-error>
+                  <mat-error *ngIf="changePasswordForm.get('newPassword')?.hasError('minLength')">
+                    {{ changePasswordForm.get('newPassword')?.errors?.['minLength']?.message }}
+                  </mat-error>
+                  <mat-error
+                    *ngIf="changePasswordForm.get('newPassword')?.hasError('invalidChars')"
+                  >
+                    {{ changePasswordForm.get('newPassword')?.errors?.['invalidChars']?.message }}
+                  </mat-error>
                 </mat-form-field>
 
                 <mat-form-field appearance="outline" class="full-width">
@@ -455,18 +487,21 @@
                   <input
                     matInput
                     type="password"
-                    [(ngModel)]="passwordState.confirmNewPassword"
-                    (ngModelChange)="onConfirmNewPasswordChange()"
+                    formControlName="confirmNewPassword"
                     placeholder="Confirm your new password"
                     autocomplete="new-password"
-                    [class.mat-form-field-invalid]="!!errors.confirmNewPassword"
                   />
                   <mat-icon matSuffix svgIcon="key"></mat-icon>
-                  @if (errors.confirmNewPassword) {
-                    <mat-error>{{ errors.confirmNewPassword }}</mat-error>
-                  }
+                  <mat-error
+                    *ngIf="changePasswordForm.get('confirmNewPassword')?.hasError('required')"
+                  >
+                    Please confirm your new password
+                  </mat-error>
+                  <mat-error *ngIf="changePasswordForm.hasError('passwordMismatch')">
+                    {{ changePasswordForm.errors?.['passwordMismatch']?.message }}
+                  </mat-error>
                 </mat-form-field>
-              </div>
+              </form>
             </div>
 
             <div class="card-actions">
