--- a/src/app/shared/overviews-shared/remotes-panel/remotes-panel.component.html
+++ b/src/app/shared/overviews-shared/remotes-panel/remotes-panel.component.html
@@ -19,21 +19,19 @@
           [showOpenButton]="shouldShowOpenButton(remote)"
           [primaryActionLabel]="primaryActionLabel"
           [activeIcon]="activeIcon"
+          [primaryActions]="remote.primaryActions"
           (remoteClick)="onRemoteSelected($event)"
           (openInFiles)="onOpenInFiles($event)"
-          (primaryAction)="onPrimaryAction($event)"
-          (secondaryAction)="onSecondaryAction($event)"
-          (mountAction)="onMountAction($event)"
-          (unmountAction)="onUnmountAction($event)"
-          (syncAction)="onSyncAction($event)"
-          (copyAction)="onCopyAction($event)"
-          (stopSyncAction)="onStopSyncAction($event)"
-          (stopCopyAction)="onStopCopyAction($event)"
-          (moveAction)="onMoveAction($event)"
-          (bisyncAction)="onBisyncAction($event)"
-          (stopMoveAction)="onStopMoveAction($event)"
-          (stopBisyncAction)="onStopBisyncAction($event)"
-          (configurePrimaryActions)="onConfigurePrimaryActions($event)"
+          (mountAction)="startJob.emit({ type: 'mount', remoteName: $event })"
+          (unmountAction)="stopJob.emit({ type: 'mount', remoteName: $event })"
+          (syncAction)="startJob.emit({ type: 'sync', remoteName: $event })"
+          (copyAction)="startJob.emit({ type: 'copy', remoteName: $event })"
+          (stopSyncAction)="stopJob.emit({ type: 'sync', remoteName: $event })"
+          (stopCopyAction)="stopJob.emit({ type: 'copy', remoteName: $event })"
+          (moveAction)="startJob.emit({ type: 'move', remoteName: $event })"
+          (bisyncAction)="startJob.emit({ type: 'bisync', remoteName: $event })"
+          (stopMoveAction)="stopJob.emit({ type: 'move', remoteName: $event })"
+          (stopBisyncAction)="stopJob.emit({ type: 'bisync', remoteName: $event })"
         ></app-remote-card>
       }
     </div>
